Adjust content border to avoid overflow

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3127,7 +3127,8 @@
 		@media screen and (max-width: 1680px) {
 
 			.spotlights > section > .content {
-				padding: 4em 4em 2em 4em ;
+				padding: 1.8em 1.8em 1em 1.8em ;
+				/*padding: 4em 4em 2em 4em ;*/
 			}
 
 		}
